--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@react-navigation/native-stack": "^6.6.1",
     "expo": "~44.0.0",
     "expo-app-loading": "^1.3.0",
+    "expo-file-system": "~13.1.4",
     "expo-font": "^10.0.5",
+    "expo-image-picker": "~12.0.1",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
@@ -26,7 +28,8 @@
     "react-native-web": "0.17.1",
     "react-redux": "^8.0.1",
     "redux": "^4.2.0",
-    "redux-thunk": "^2.4.1"
+    "redux-thunk": "^2.4.1",
+    "expo-permissions": "~13.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
