--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-redux": "^8.0.1",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
-    "expo-permissions": "~13.1.0"
+    "expo-permissions": "~13.1.0",
+    "expo-sqlite": "~10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
